# emitens-bank-forecasting

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  TRANSFORMER_VS_RECURRENT_RESULTS.md  rebuttal_instructions.md  rebuttal_response.md
code/: README.md  analyze_study_results.py  build_data_with_macro.py  flowchart.puml  main.ipynb  main.py  make_shap_beeswarm.py  modal_train.py  pyproject.toml  run_ablation.py  run_all_training.py  run_modal_batch_benchmark.py  run_shap_from_checkpoints.py  run_study_multiseed.py  run_transformer_training.py  saran_ieee.md  train_price.py  train_price_pytorch.py  train_price_pytorch_attention.py  train_price_pytorch_cnn.py  train_price_pytorch_extended.py  train_price_pytorch_norm.py  train_price_transformers.py  train_sota_common.py  train_sota_data.py  train_sota_macro.py
code/data/: BBCA.csv  BBTN.csv
code/data_macro/: API_IDN_PA.NUS.FCRF_en_csv_v2_111434.csv  Metadata_Country_API_IDN_PA.NUS.FCRF_en_csv_v2_111434.csv  Metadata_Indicator_API_IDN_PA.NUS.FCRF_en_csv_v2_111434.csv  README.md  ihsg_annual_2003_2024.csv  ihsg_annual_2004_2024.csv  ihsg_daily_2003_2024.csv  ihsg_daily_2004_2024.csv  indonesia_bi_rate_fred.csv
code/data_with_macro/: BBCA.csv  BBNI.csv  BBRI.csv  BBTN.csv  BDMN.csv  BMRI.csv  BNGA.csv
code/results_batch_benchmark/: batch_benchmark_summary.csv
code/results_recurrent_variants_study/: best_three_family_by_bank.csv  study_runs.csv  summary_by_bank_case.csv
code/results_sota_data/: study_runs_sota.csv
code/results_study_full/: best_vs_baseline_stats.csv  study_runs.csv  summary_by_bank_case.csv
(+8819 files in other folders)
