[project]
name = "code"
version = "0.1.0"
description = "Starter template for IEEE research papers with integrated Python code experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.3.0",
    "pandas>=3.0.0",
    "scikit-learn>=1.7.0",
    "shap>=0.49.1",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
]
